Firebase init done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.5.1/firebase-app.js"></!-->
+    -->
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.5.1/firebase-analytics.js"></!-->
+    -->
+
+    <!-- <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAqvsj89rzaPm6bGMtl8mhx3YgVeJVL0rw",
+        authDomain: "h8-dead-or-alive.firebaseapp.com",
+        databaseURL: "https://h8-dead-or-alive.firebaseio.com",
+        projectId: "h8-dead-or-alive",
+        storageBucket: "h8-dead-or-alive.appspot.com",
+        messagingSenderId: "990506209939",
+        appId: "1:990506209939:web:8db8c3eba52f460ca4f366",
+        measurementId: "G-CX4ZDV6LNG"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </!-->
+    -->
     <script src="./src/main.js"></script>
   </body>
 </html>
